test/libyul/yulSyntaxTests/builtin_identifier_3.yul
{
	function f(x) { f(add) }
}
// ----
// ParserError 2314: (24-25): Expected '(' but got ')'
